--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -1,6 +1,6 @@
 [
   {
-    "campaign_name": "Free rug",
+    "project_name": "Free rug",
     "id": "bcbae663-0a0c-41fe-b57b-80e3592f3c41",
     "template_id": "aa2a9bb1-73e7-4478-8302-3c3612ad61ea",
     "tables_data": [
@@ -118,8 +118,8 @@
     ]
   },
   {
-    "campaign_name": "New Year resolutions ",
-    "id": "bcbae663-0a0c-41fe-b57b-80e3592f3c41",
+    "project_name": "New Year resolutions ",
+    "id": "bcbae663-0a0c-41fe-b57b-80e3592f3c43",
     "template_id": "aa2a9bb1-73e7-4478-8302-3c3612ad61ec",
     "tables_data": [
       {
@@ -142,8 +142,8 @@
     ]
   },
   {
-    "campaign_name": "Free tables",
-    "id": "bcbae663-0a0c-41fe-b57b-80e3592f3c41",
+    "project_name": "Free tables",
+    "id": "bcbae663-0a0c-41fe-b57b-80e3592f3c42",
     "template_id": "aa2a9bb1-73e7-4478-8302-3c3612ad61ea",
     "tables_data": [
       {
