--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.49.2",
     "react-router-dom": "^6.21.1",
+    "react-use-keypress": "^1.3.1",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^9.0.1",
