--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.49.2",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.21.1",
     "react-use-keypress": "^1.3.1",
     "tailwind-merge": "^2.2.0",
