--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "deploy": "vite build && gh-pages -d dist"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/sortable": "^8.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@hookform/resolvers": "^3.3.3",
     "@radix-ui/react-context-menu": "^2.1.5",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -30,6 +33,7 @@
     "lucide-react": "^0.303.0",
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.49.2",
